Increase the font-size of banner nav placed submit button side register form bar using position fixed the width of register bar remove the text-shadow and box-shadow from submit button make main banner txt bold and light according to psd design mock up. Add header to second section of marketing page with appropriate color. Give fixed height and width to video iframe in html tag. placed presentation video inside of video frame and presentation texts in bottom of the video frame
Section three nodebomb story
Give fixed height and width to story images and add border in it.
fixed the header and story txt typography.
Increase the font-size of story-text.
Add margins top an bottom in this section.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<!-- Header -->
+Header -->
 <header class="hero">  
   <div class="container banner-margin-top">
     <div class="row">      
@@ -10,8 +10,10 @@
           <form action="" class="">
             <div class="form-group">
               <label for=""> Register now developers for early access</label><br>
-              <input type="text" class="form-control" placeholder="Enter your email address">
-              <button type="submit" class="btn btn-default email-submit-btn">Submit</button>            
+              <div class="form-wrap">
+                <input type="text" class="form-control" placeholder="Enter your email address">
+                <button type="submit" class="btn btn-default email-submit-btn">Submit</button>
+              </div>            
             </div>
           </form>
         </section>       
@@ -71,23 +73,23 @@
 <section class="presentation">
   <div class="container">
     <section class="row">
-      <div class="col-md-6">
+      <div class="">
         <header>
-          <h2 class="section-heading">NodeBomb Presentation</h2>
+          <h2 class="section-heading"><span>NodeBomb</span> Presentation</h2>
+          <div class="heading-border"></div>
           <div class="sub_heading">
             <span>Location <a href="#">New York City</a></span> | <span>Speaker <a href="#">Ben Orenstien</a> </span> 
           </div>
         </header>
+      </div>
+      <div class="col-md-12">
+        <div class="presentation_video">
+          <iframe width="825" height="490" src="https://www.youtube.com/embed/SkdrYWhh-8s" frameborder="0" allowfullscreen></iframe>
+        </div>
         <article>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam at lectus ac dolor bibendum suscipit. Vivamus laoreet dapibus neque vel ornare. Curabitur at tellus a magna suscipit lobortis. Donec gravida lacinia ligula, eu finibus elit. Aliquam ut turpis iaculis, suscipit nisl quis, dignissim metus.
+          <p class="Presentation-article">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam at lectus ac dolor bibendum suscipit. Vivamus laoreet dapibus neque vel ornare. Curabitur at tellus a magna suscipit lobortis. Donec gravida lacinia ligula, eu finibus elit. Aliquam ut turpis iaculis, suscipit nisl quis, dignissim metus.
           </p>
         </article>
-        <h2>Coders Unite.</h2>
-      </div>
-      <div class="col-md-6">
-        <div class="presentation_video">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/SkdrYWhh-8s" frameborder="0" allowfullscreen></iframe>
-        </div>
       </div>
     </section> 
   </div>
@@ -96,20 +98,15 @@
 <!-- Team Section -->
 <section id="team">
   <div class="container">
-    <div class="row">
-      <div class="col-lg-12 text-center">
-        <h2 class="section-heading">Three Success Stories</h2>        
-      </div>
-    </div>
     <div class="row team">
-      <div class="col-sm-4">
+      <div class="col-sm-12">
         <div class="team_member text-center">
           <div class="team_images mem1"></div>
           <h4><span class="story-prsn-name"><strong>Eric</strong></span> <span>USA</span></h4>
-          <p> "I created a profile and, and just landed my dream job."</p>                      
+          <p> "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam at lectus ac dolor bibendum suscipit. Vivamus laoreet dapibus neque vel ornare. Curabitur at tellus a magna suscipit lobortis.Lorem ipsum dolor sit amet,"</p>                      
         </div>
       </div>
-      <div class="col-sm-4">
+      <!-- <div class="col-sm-4">
         <div class="team_member text-center">
           <div class="team_images mem2"></div>                        
           <h4><span class="story-prsn-name"><strong>Amit</strong></span> <span>Bangladesh</span></h4>
@@ -123,7 +120,7 @@
           <h4><span class="story-prsn-name"><strong>Pavel</strong></span> <span>Canada</span></h4>
           <p> "The Q&A Groups helped me fix a bug in my code"</p>                       
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 </section>
@@ -212,4 +209,4 @@
   </div>
 
 </section>
-<!-- End Showcace -->
+<!-- End Showcace
