--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -217,6 +217,7 @@ fieldset[disabled] .btn-xl.active {
   font-weight: 400;
   letter-spacing: 1px;
   color: #fff;
+  font-size: 20px
 }
 
 .navbar-default .nav li a:hover,
