--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -39,7 +39,7 @@ a.navbar-brand
   font-family: 'texgyreadventor-bold'  
 .nav > li > 
   padding: 10px 15px
-  font-size: 14px
+  font-size: 20px
 
 .main-navbar
   position: relative
@@ -61,8 +61,10 @@ a.navbar-brand
   width: 100%
   img
     width: 80%
+.form-wrap
+  position: relative
 .email_register  
-  width: 74%
+  width: 63%
   text-align: left
   .form-control
     background-color: rgba(0, 0, 0, 0.48)   
@@ -79,13 +81,17 @@ a.navbar-brand
   //   margin-top: -4px
   //   &:hover
   //     background: #FED136
+
   .email-submit-btn
-    position: relative
-    left: -140px
+    position: absolute
+    margin-left: -142px
     box-shadow: none !important
-    height: 49px !important
-    border-bottom: 1px solid #fff !important
+    height: 48px !important
     background-color: #FF5858
+    border-top-left-radius: 0px !important
+    border-bottom-left-radius: 0px !important
+    &:hover
+      background-color: #ED4444
   .btn
     color: #fff
     font-size: 20px
@@ -93,7 +99,7 @@ a.navbar-brand
     -moz-border-radius: 3px
     border-radius: 3px
     padding: 8px 35px
-    margin-top: -8px
+    margin-top: 1px
     -webkit-margin-top: -5px
     border: none
     font-weight: bold
@@ -196,20 +202,45 @@ section
 .presentation
   margin: -80px 0 50px 0
   background: #E4E6EF
-  padding: 60px 0  
+  padding: 60px 0
+  text-align: center  
   .sub_heading
     margin: 10px 0
+    padding: 22px 0px
+    font-size: 23px
     a
-      color: rgb(8, 132, 160)
+      color: #00A0C6
+      outline: 0px none !important
   h3
-    font-family: 'texgyreadventor-bold'    
+    font-family: 'raleway-bold'    
   h2.section-heading
     color: #000
+    span
+      color: #00A0C6
   article + h2
     color: #000
     padding-top: 70px
-//section seperation
+.presentation_video
+  width: 900px
+  margin: 0 auto
+  padding: 80px
+  border-radius: 30px
+  background-color: #111
+  height: 585px
+  position: relative
 
+  iframe
+    position: absolute
+    top: 38px
+    left: 38px
+.Presentation-article
+  font-size: 20px
+  margin: 50px 50px 15px
+//section seperation
+.heading-border
+  border-top: 1px solid #000
+  width: 450px
+  margin: 0 auto
 .seperation
   width: 45%
   position: relative
@@ -235,13 +266,14 @@ section
   margin-bottom: 20px
   padding: 0 0 10px 0px
   text-transform: capitalize
-  font-family: 'texgyreadventor-bold'
+  font-family: 'raleway-bold'
 .story-prsn-name
   font-size: 25px
 .team_member
-  padding: 0 20px
+  margin: 10px 50px 30px
 .team_member h4
   line-height: 0.4
+  padding-bottom: 40px
 .team_member h4 > span
   padding-right: 5px
 .team_member h4 > span + span
@@ -249,13 +281,14 @@ section
   padding-left: 10px
 .team_member p
   text-align: center
-  font-size: 16px
-  line-height: 24px
-  padding: 0 20px
+  font-size: 22px
+  line-height: 34px
+  padding: 0 38px
 .team_images
-  width: 280px
-  height: 280px
+  width: 110px
+  height: 110px
   margin-bottom: 30px
+  border: 5px solid #eee
 .dark-grey
   background-color: #DDD 
 
