--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,10 +1,7 @@
 <footer>
   <div class="container">
     <div class="row">
-      <div class="col-md-4">
-        <span class="copyright">Copyright &copy; NodeBomb 2015</span>
-      </div>
-      <div class="col-md-4">
+      <div>
         <ul class="list-inline social-buttons">
           <li><a href="#"><i class="fa fa-twitter"></i></a>
           </li>
@@ -14,14 +11,18 @@
           </li>
         </ul>
       </div>
-      <div class="col-md-4">
+      <div>
         <ul class="list-inline quicklinks">
           <li><a href="#">Privacy Policy</a>
           </li>
           <li><a href="#">Terms of Use</a>
           </li>
         </ul>
+        <div class="footer-bottom-line"></div>
       </div>
     </div>
+  </div>
+  <div>
+    <span class="copyright">Copyright &copy; NodeBomb 2015</span>
   </div>
 </footer>
