--- a/app/views/shared/_innerheader.html.erb
+++ b/app/views/shared/_innerheader.html.erb
@@ -10,12 +10,12 @@
         <span class="icon-bar"></span>
       </button> -->
       <a class="navbar-brand page-scroll" href="/">
-        <%=image_tag ("logo.png") %><!--  <span><span>Node</span>Bomb</span> -->
+        <%=image_tag ("NodeBomb_logo.png") %> <span><span>Node</span>Bomb</span>
       </a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <!-- <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li class="hidden">
           <a href="#page-top"></a>
@@ -36,7 +36,7 @@
           <a class="page-scroll" href="/contact">Contact</a>
         </li>
       </ul>
-    </div> -->
+    </div>
     <!-- /.navbar-collapse -->
   </div>
   <!-- /.container-fluid -->
