change in banner bold txt and main banner img height and add css in media query add min-height to  main banner make font-weight normal in main bold banner text. add css style  in media query for responsive view upto screen-size(480px)

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -139,7 +139,7 @@ a.navbar-brand
   padding : 60px 0px
 
 header.hero
-  height: 680px
+  min-height: 680px
   position: relative
   width: 100%
   section
@@ -165,7 +165,6 @@ header.hero
         border-right: 1px solid #fff
         padding-right: 30px
         font-family: 'raleway-bold'
-        font-weight: bold
         font-size: 55px
       .what-yuo-build-txt 
         font-size: 25px
@@ -587,3 +586,55 @@ section
 @media(max-width:768px) 
   .email_register 
     width: 95%
+@media(min-width:480px)
+  .hero
+    padding: 0px 10px
+  .navbar > .container > .navbar-header > a.navbar-brand
+    margin: 0px
+  header.hero .header_content h1
+    line-height: 55px
+  header.hero .header_content h1 span
+    font-size: 35px
+  header.hero .header_content h1 .bold-banner-txt
+    display: block
+    font-size: 35px
+  header.hero .header_content h1 .what-yuo-build-txt
+    font-size: 23px
+    margin-left: 0px
+  header.hero .header_content .banner-txt
+    width: 100%
+    font-size: 19px
+  .email_register label, .bottom-email_register label
+    font-size: 25px
+    margin: 10px 0px
+  .form-wrap
+    width: 100%
+  .presentation_video
+    height: 300px
+    width: 100%
+    border-radius: 20px
+  .presentation_video iframe
+    width: 90%
+    height: 75%
+    top: 31px
+    left: 22px
+  #carousel-example-generic
+    padding: 0px 0px 20px
+  .team_member p
+    padding: 0px
+    font-size: 18px
+  #team
+    padding: 40px 0px
+  .community-txt-1,
+  .community-txt-2,
+  .community-txt-3,
+  .community-txt-4
+    padding: 0px 50px
+  #showcase
+    height: 538px
+    padding: 0px 25px
+  #showcase img
+    width: 100%
+    height: 100%
+  #navigation
+    display: none
