Make the NodeBomb responsive by using media query.

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -504,7 +504,7 @@ section
   height: 663px
   overflow-y: hidden
   img
-    height: 412px
+    height: 391px
     width: 899px
     margin: 57px 0px 0px
   h2
@@ -582,11 +582,297 @@ section
     color: #000
     margin-left: -8px
   .navbar-brand span span
-    font-family: 'texgyreadventor-bold'  
-@media(max-width:768px) 
-  .email_register 
+    font-family: 'texgyreadventor-bold' 
+
+  
+@media (min-width: 992px) and (max-width: 1199px)
+  .hero
+  .navbar > .container > .navbar-header > a.navbar-brand
+    margin: 0px
+  header.hero .header_content h1
+    line-height: 67px
+  header.hero .header_content h1 span
+    font-size: 40px
+  header.hero .header_content h1 .bold-banner-txt
+    display: inline-block
+    font-size: 42px
+  header.hero .header_content h1 .what-yuo-build-txt
+    font-size: 23px
+    margin-left: 20px
+  header.hero .header_content .banner-txt
+    width: 70%
+    font-size: 19px
+  .email_register label, .bottom-email_register label
+    font-size: 30px
+    margin: 20px 0px
+  .form-wrap
+    width: 50%
+  .presentation_video
+    height: 500px
+    width: 100%
+    border-radius: 20px
+  .presentation_video iframe
     width: 95%
-@media(min-width:480px)
+    height: 85%
+    top: 28px
+    left: 22px
+  #carousel-example-generic
+    padding: 0px 0px 20px
+  .team_member p
+    padding: 0px
+    font-size: 18px
+  #team
+    padding: 40px 0px
+  .community-txt-1,
+  .community-txt-2,
+  .community-txt-3,
+  .community-txt-4
+    padding: 0px 50px
+  #showcase img
+  .bottom-email_register label
+    margin: 0px
+    font-size: 23px
+    line-height: 50px
+  #navigation
+    top: 189px
+  .community_blocks
+    .col-md-3
+      width: 50%
+  #showcase
+    height: 100%
+@media (max-width: 991px)
+  .hero
+  .navbar > .container > .navbar-header > a.navbar-brand
+    margin: 0px
+  header.hero .header_content h1
+    line-height: 67px
+  header.hero .header_content h1 span
+    font-size: 40px
+  header.hero .header_content h1 .bold-banner-txt
+    display: inline-block
+    font-size: 42px
+  header.hero .header_content h1 .what-yuo-build-txt
+    font-size: 23px
+    margin-left: 20px
+  header.hero .header_content .banner-txt
+    width: 70%
+    font-size: 19px
+  .email_register label, .bottom-email_register label
+    font-size: 30px
+    margin: 20px 0px
+  .form-wrap
+    width: 50%
+  .presentation_video
+    height: 500px
+    width: 100%
+    border-radius: 20px
+  .presentation_video iframe
+    width: 94%
+    height: 85%
+    top: 28px
+    left: 22px
+  #carousel-example-generic
+    padding: 0px 0px 20px
+  .team_member p
+    padding: 0px
+    font-size: 18px
+  #team
+    padding: 40px 0px
+  .community-txt-1,
+  .community-txt-2,
+  .community-txt-3,
+  .community-txt-4
+    padding: 0px 50px
+  #showcase img
+    width: 100%
+    height: 100%
+  .bottom-email_register label
+    margin: 0px
+    font-size: 23px
+    line-height: 50px
+  #navigation
+    top: 189px
+  #showcase
+    height: 100%
+@media (min-width: 768px) and (max-width: 979px)
+  .hero
+  .navbar > .container > .navbar-header > a.navbar-brand
+    margin: 0px
+  header.hero .header_content h1
+    line-height: 67px
+  header.hero .header_content h1 span
+    font-size: 40px
+  header.hero .header_content h1 .bold-banner-txt
+    display: inline-block
+    font-size: 42px
+  header.hero .header_content h1 .what-yuo-build-txt
+    font-size: 23px
+    margin-left: 20px
+  header.hero .header_content .banner-txt
+    width: 82%
+    font-size: 19px
+  .email_register label, .bottom-email_register label
+    font-size: 30px
+    margin: 20px 0px
+  .form-wrap
+    width: 78%
+  .presentation_video
+    height: 470px
+    width: 100%
+    border-radius: 20px
+  .presentation_video iframe
+    width: 94%
+    height: 85%
+    top: 28px
+    left: 22px
+  #carousel-example-generic
+    padding: 0px 0px 20px
+  .team_member p
+    padding: 0px
+    font-size: 18px
+  #team
+    padding: 40px 0px
+  .community-txt-1,
+  .community-txt-2,
+  .community-txt-3,
+  .community-txt-4
+    padding: 0px 50px
+  #showcase img
+    width: 100%
+    height: 100%
+    margin-top: 60px
+  .bottom-email_register label
+    margin: 0px
+  #navigation
+    top: 189px
+  #showcase
+    height: 100%
+@media (max-width: 767px)
+  .hero
+    padding: 0px 10px
+  .navbar > .container > .navbar-header > a.navbar-brand
+    margin: 0px
+  header.hero .header_content h1
+    line-height: 67px
+  header.hero .header_content h1 span
+    font-size: 40px
+  header.hero .header_content h1 .bold-banner-txt
+    display: block
+    font-size: 42px
+  header.hero .header_content h1 .what-yuo-build-txt
+    font-size: 23px
+    margin-left: 0px
+  header.hero .header_content .banner-txt
+    width: 100%
+    font-size: 19px
+  .email_register label, .bottom-email_register label
+    font-size: 30px
+    margin: 20px 0px
+  .form-wrap
+    width: 78%
+  .presentation_video
+    height: 470px
+    width: 100%
+    border-radius: 20px
+  .presentation_video iframe
+    width: 94%
+    height: 85%
+    top: 28px
+    left: 22px
+  #carousel-example-generic
+    padding: 0px 0px 20px
+  .team_member p
+    padding: 0px
+    font-size: 18px
+  #team
+    padding: 40px 0px
+  .community-txt-1,
+  .community-txt-2,
+  .community-txt-3,
+  .community-txt-4
+    padding: 0px 50px
+  #showcase img
+    width: 100%
+    height: 100%
+    margin-top: 75px
+  #navigation
+    display: none
+  .bottom-email_register label
+    margin: 0px
+  .community
+    width: 50%
+  #showcase
+    padding: 0px 20px
+    height: 100%
+@media (min-width: 580px) and (max-width: 767px)
+  #showcase img
+    width: 100%
+    height: 100%
+  #showcase
+    height: 100%
+@media (max-width: 725px)
+  .presentation_video iframe
+    width: 92%
+    height: 85%
+    top: 28px
+    left: 22px
+  .bottom-form-wrap
+    width: 90%
+  #showcase
+    height: 100%
+@media (max-width: 580px)
+  .hero
+    padding: 0px 10px
+  .navbar > .container > .navbar-header > a.navbar-brand
+    margin: 0px
+  header.hero .header_content h1
+    line-height: 55px
+  header.hero .header_content h1 span
+    font-size: 35px
+  header.hero .header_content h1 .bold-banner-txt
+    display: block
+    font-size: 35px
+  header.hero .header_content h1 .what-yuo-build-txt
+    font-size: 23px
+    margin-left: 0px
+  header.hero .header_content .banner-txt
+    width: 100%
+    font-size: 19px
+  .email_register label, .bottom-email_register label
+    font-size: 25px
+    margin: 10px 0px
+  .form-wrap
+    width: 100%
+  .presentation_video
+    height: 350px
+    width: 100%
+    border-radius: 20px
+  .presentation_video iframe
+    width: 92%
+    height: 81%
+    top: 28px
+    left: 22px
+  #carousel-example-generic
+    padding: 0px 0px 20px
+  .team_member p
+    padding: 0px
+    font-size: 18px
+  #team
+    padding: 40px 0px
+  .community-txt-1,
+  .community-txt-2,
+  .community-txt-3,
+  .community-txt-4
+    padding: 0px 50px
+  #showcase img
+    width: 100%
+    height: 100%
+    margin-top: 75px
+  #navigation
+    display: none
+  #showcase
+    height: 100%
+@media (max-width: 480px)
   .hero
     padding: 0px 10px
   .navbar > .container > .navbar-header > a.navbar-brand
@@ -631,8 +917,7 @@ section
   .community-txt-4
     padding: 0px 50px
   #showcase
-    height: 538px
-    padding: 0px 25px
+    height: 100%
   #showcase img
     width: 100%
     height: 100%
