--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -166,49 +166,48 @@
 <section id="community" >
   <div class="container">
     <div class="row community-row">
-      <div class="col-lg-12 text-center">
+      <div class="col-md-12 text-center">
         <h2 class="community-section-heading"><span>Join the</span> nodeBomb community</h2>
         <div class="heading-border"></div>
         <h3 class="community-2-heading">in 1-2-3-4</h3>
       </div>
       <div class="row community_blocks">
-        <div class="col-sm-3 text-center">
-          <div class="node-bomb-community">
-            <div class="community-btns ">
-              <%= image_tag("create-portfolio.png", :alt => "community icon") %>
+        <div class="container">
+          <div class="col-md-3 text-center">
+            <div class="node-bomb-community">
+              <div class="community-btns ">
+                <%= image_tag("create-portfolio.png", :alt => "community icon") %>
+              </div>
+              <h3>Create a work portfolio!</h3>
+              <p class="community-txt-1">Quickly enhance your work profile and increase your work opportunities with an online portfolio.</p>
             </div>
-            <span class="fa fa-plus"></span>
-            <h3>Create a work portfolio!</h3>
-            <p class="community-txt-1">Quickly enhance your work profile and increase your work opportunities with an online portfolio.</p>
           </div>
-        </div>
-        <div class="col-sm-3 text-center">
-          <div class="node-bomb-community">
-            <div class="community-btns ">
-              <%= image_tag("connect-developer.png", :alt => "community icon") %>
+          <div class="col-md-3 text-center">
+            <div class="node-bomb-community">
+              <div class="community-btns ">
+                <%= image_tag("connect-developer.png", :alt => "community icon") %>
+              </div>
+              <h3>Connect with Developers across the globe</h3>
+              <p class="community-txt-2">Connect with developers across the globe, follow each other, share ideas, share code and more</p>
             </div>
-            <span class="fa fa-plus"></span>
-            <h3>Connect with Developers across the globe</h3>
-            <p class="community-txt-2">Connect with developers across the globe, follow each other, share ideas, share code and more</p>
-          </div>
-        </div>
-        <div class="col-sm-3 text-center">
-          <div class="node-bomb-community">
-            <div class="community-btns ">
-              <%= image_tag("join-group.png", :alt => "community icon") %>
+          </div>          
+          <div class="col-md-3  text-center">
+            <div class="node-bomb-community">
+              <div class="community-btns ">
+                <%= image_tag("join-group.png", :alt => "community icon") %>
+              </div>
+              <h3>Search and join Q&A Groups</h3>
+              <p class="community-txt-3">Search any programming topic or language that interests you and quickly join our group communities and discussions </p>
             </div>
-            <span class="fa fa-plus"></span>
-            <h3>Search and join Q&A Groups</h3>
-            <p class="community-txt-3">Search any programming topic or language that interests you and quickly join our group communities and discussions </p>
           </div>
-        </div>
-        <div class="col-sm-3 text-center">
-          <div class="node-bomb-community">
-            <div class="community-btns ">
-              <%= image_tag("startup-with-invester.png", :alt => "community icon") %>
-            </div>          
-            <h3>Startups connect with Investors</h3>
-            <p class="community-txt-4">Startups that meet the criteria can easily post their work to our exponentially growing list of VC's and Angel Investors</p>
+          <div class="col-md-3 text-center">
+            <div class="node-bomb-community">
+              <div class="community-btns ">
+                <%= image_tag("startup-with-invester.png", :alt => "community icon") %>
+              </div>          
+              <h3>Startups connect with Investors</h3>
+              <p class="community-txt-4">Startups that meet the criteria can easily post their work to our exponentially growing list of VC's and Angel Investors</p>
+            </div>
           </div>
         </div>
       </div>
@@ -226,7 +225,7 @@
         <h2>Use easily <br> <span>NodeBomb on any devices</span></h2>
         <div class="heading-border"></div>
       </div>
-      <%=image_tag("display-group.png", :alt => "Displaying layout") %>
+      <%=image_tag("desk-group.png", :alt => "Displaying layout") %>
     </div>
   </div>
 </section>
